# reddit_data_stream

./: README.md  airflow.env  docker-compose.yml  pyproject.toml
config/: config.conf  post_fields.yml
dags/: reddit_dag.py
data/output/: reddit_20241027.csv
notebooks/: explore.ipynb
pipelines/: reddit_pipeline.py
scripts/: load_to_aws.py  reddit_etl.py
